fixed layout issue, made some changes to units for scaling

--- a/style/photos.css
+++ b/style/photos.css
@@ -21,7 +21,7 @@
   background-color: black;
   color: white;
   width: 75vw;
-  height: 7vh;
+  height: 3.4em;
   position: relative;
   text-align: center;
 }
@@ -30,7 +30,7 @@
   background-color: white;
   color: black;
   text-align: left;
-  font-size: 4vh;
+  font-size: 2em;
   padding-top: 13px;
   padding-left: 10px;
 }
@@ -89,7 +89,7 @@
 
 .gallery img {
   /* width: 50vh; */
-  width: 50vh;
+  width: 25vw;
   height: 50vh;
   object-fit: cover;
   padding: 30px;
@@ -113,7 +113,7 @@
 }
 
 .gallery ul li #name {
-  font-size: 20px;
+  font-size: 1.5em;
   font-weight: 600;
 }
 
